# agnpy

./: .zenodo.json  codemeta.json  pyproject.toml
agnpy/fit/: core.py  data.py  models.py
agnpy/time_evolution/: _time_evolution_utils.py  types.py
docs/: conf.py
