[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agnpy"
version = "0.5.1"
description = "Modelling jetted Active Galactic Nuclei radiative processes with python"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Cosimo Nigro", email = "cosimonigro2@gmail.com.com" }
]
requires-python = ">=3.11,<3.14"

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "astropy>=7.0",
    "numpy>=1.24,<2.3",
    "pandas>=1.5",
    "scipy>=1.14",
    "pyyaml>=6.0", # needed to read astropy ecsv file
    "matplotlib>=3.9.1",
    "pre-commit",
]

[project.optional-dependencies]
gammapy = ["gammapy>=1.3"]
sherpa = ["sherpa"]
all = ["agnpy[gammapy]", "agnpy[sherpa]"]

[project.urls]
Homepage = "https://github.com/cosimoNigro/agnpy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
